Salesforce/main/default/objects/Centro_de_CO__c/fields/Campania__c.field-meta.xml
<CustomField>
    <fullName>Campania__c</fullName>
    <label>Campaña</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>21/22</fullName>
                <default>true</default>
                <label>21/22</label>
            </value>
            <value>
                <fullName>20/21</fullName>
            </value>
            <value>
                <fullName>19/20</fullName>
            </value>
            <value>
                <fullName>18/19</fullName>
            </value>
            <value>
                <fullName>17/18</fullName>
            </value>
            <value>
                <fullName>16/17</fullName>
            </value>
            <value>
                <fullName>15/16</fullName>
            </value>
            <value>
                <fullName>14/15</fullName>
            </value>
            <value>
                <fullName>13/14</fullName>
            </value>
            <value>
                <fullName>12/13</fullName>
            </value>
            <value>
                <fullName>11/12</fullName>
            </value>
            <value>
                <fullName>10/11</fullName>
            </value>
            <value>
                <fullName>09/10</fullName>
            </value>
            <value>
                <fullName>08/09</fullName>
            </value>
            <value>
                <fullName>07/08</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>