Salesforce/main/default/objects/Centro_de_CO__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Região</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SUR</fullName>
            </value>
            <value>
                <fullName>CERRADO</fullName>
            </value>
            <value>
                <fullName>SIN REGION</fullName>
            </value>
            <value>
                <fullName>REGION 1</fullName>
            </value>
            <value>
                <fullName>REGION 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>